$Id: History,v 1.29 2002-04-24 07:13:26 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 24, 2002  G.Cosmo - transport-V04-00-05
-----------------------
- Added G4DEBUG_TRANSPORT flag in GNUmakefile and (on suggestionh of
  J.Apostolakis) replaced to G4VERBOSE in G4Transportation::PostStepDoIt()
  for extra-check on volume boundary.
  Issues addressed by problem report #130 should now be resolved.

April 10, 2002  M.Dressel - transport-V04-00-04
-------------------------
- Added comments to headers of transportation classes and managers for
  importance biasing, to fullfill Software Reference Manual.

Apr 9, 2002 G.Cosmo
-------------------
- Added liability disclaimer to scorer classes and minor cosmetics.

Apr 8, 2002 M.Dressel - transport-V04-00-03
---------------------
- Resolved compilation problems on HP-aCC.

Apr 4, 2002 M.Dressel - transport-V04-00-02
---------------------
- Cleaned compilation problems for G4std/std.

Apr 4, 2002 M.Dressel - transport-V04-00-01
---------------------
- Resolved compilation problems on SUN-CC and Linux-egcs.

Mar  28, 2002 M.Dressel - transport-V04-00-00
-----------------------
- First implementation of transportation classes and managers for importance