@@ -1,4 +1,4 @@
-$Id: History,v 1.29 2002-04-24 07:13:26 gcosmo Exp $
+$Id: History,v 1.30 2002-05-02 08:43:22 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May    2, 2002  M.Dressel 
+-------------------------
+- Change in G4ProcessPlacer: set process vector via process manager not 
+  directly. 
+- Change in G4ParallelTranport: use StartTracking to signal inital step.
+  This should help to locate "suspended" tracks.
 
 April 24, 2002  G.Cosmo - transport-V04-00-05
 -----------------------
